Update 83. Remove Duplicates from Sorted List.md

--- a/83. Remove Duplicates from Sorted List.md
+++ b/83. Remove Duplicates from Sorted List.md
@@ -56,6 +56,23 @@ class Solution:
         return head
 ```
 
+## 4th step
+
+- 時間を空けて解き直した。
+- third stepと同じコードになった。
+
+```python
+class Solution:
+    def deleteDuplicates(self, head: Optional[ListNode]) -> Optional[ListNode]:
+        node = head
+
+        while node:
+            while node.next and node.val == node.next.val:
+                node.next = node.next.next
+            node = node.next
+        return head
+```
+
 - 読んだコード
   - https://github.com/yus-yus/leetcode/pull/3/files
   - https://github.com/ichika0615/arai60/pull/3/files
