Update 82. Remove Duplicates from Sorted List II.md

--- a/82. Remove Duplicates from Sorted List II.md
+++ b/82. Remove Duplicates from Sorted List II.md
@@ -98,6 +98,31 @@ class Solution:
         return dummy.next
 ```
 
+## 4th step
+
+- 時間を空けて書き直した。
+- 直した部分は、変数名と`head`ではなく`node`でリストを走査すること。
+
+```python
+class Solution:
+    def deleteDuplicates(self, head: Optional[ListNode]) -> Optional[ListNode]:
+        dummy = ListNode()
+        dummy.next = head
+        last_unique_node = dummy
+        node = head
+
+        while node and node.next:
+            if node.val != node.next.val:
+                last_unique_node = node
+                node = node.next
+                continue
+            value_to_remove = node.val
+            while node and node.val == value_to_remove:
+                node = node.next
+            last_unique_node.next = node
+        return dummy.next
+```
+
 ### 読んだコード
 
 - https://discord.com/channels/1084280443945353267/1195700948786491403/1196701558382018590
