--- a/2. Add Two Numbers.md
+++ b/2. Add Two Numbers.md
@@ -151,6 +151,34 @@ class Solution:
 ```
 
 
+## 4th step（解き直し）
+
+```python
+class Solution:
+    def addTwoNumbers(self, l1: Optional[ListNode], l2: Optional[ListNode]) -> Optional[ListNode]:
+        def get_node_val(node):
+            if node is None:
+                return 0
+            return node.val
+        
+        dummy = ListNode()
+        node = dummy
+
+        carry = 0
+        while l1 or l2 or carry:
+            total = get_node_val(l1) + get_node_val(l2) + carry
+            digit = total % 10
+            node.next = ListNode(digit)
+            node = node.next
+            if l1:
+                l1 = l1.next
+            if l2:
+                l2 = l2.next
+            carry = total // 10
+        return dummy.next
+```
+
+
 ### 読んだコード
 
 
