Update 703. Kth Largest Element in a Stream.md
Heapを再実装しました。

--- a/703. Kth Largest Element in a Stream.md
+++ b/703. Kth Largest Element in a Stream.md
@@ -79,8 +79,100 @@ class KthLargest:
 ```
 
 
-## 次やること
+## Heap実装
 
-- heapとpriority queueの違いについて調べる
-- 本のデータ構造の章を読む
-- heapを再実装する
+- Max heap(binary heap)を実装しました
+- Reference:
+    - https://github.com/python/cpython/blob/a8e93d3dca086896e668b88b6c5450eaf644c0e7/Lib/heapq.py#L207
+    - https://github.com/hayashi-ay/leetcode/pull/54/files
+ 
+```python
+class MaxHeap:
+    def __init__(self, items=None):
+        if items is None:
+            self.heap = []
+        else:
+            self.heap = items[:]  # copy items
+            for i in reversed(range(len(items) // 2)):
+                self._siftup(i)
+
+    def push(self, item):
+        """
+        Add item into heap.
+        """
+        self.heap.append(item)
+        self._siftdown(len(self.heap) - 1)
+
+    def pop(self):
+        """
+        Pop item form heap.
+        """
+        if len(self.heap) <= 1:
+            return self.heap.pop()  # Raise IndexError if heap is empty
+        return_item = self.heap[0]
+        last_ele = self.heap.pop()
+        self.heap[0] = last_ele
+        self._siftup(0)
+        return return_item
+
+    def peek(self):
+        return self.heap[0]  # Raise IndexError if heap is empty
+
+    def pushpop(self, item):
+        """
+        Faster version of push followed by pop
+        """
+        if self.heap and self.heap[0] > item:
+            self.heap[0], item = item, self.heap[0]
+            self._siftup(0)
+        return item
+
+    def replace(self, item):
+        """
+        Faster version of pop followed by push
+        """
+        return_item = self.heap[0]  # Raise IndexError if heap is empty
+        self.heap[0] = item
+        self._siftup(0)
+        return return_item
+
+    def _siftdown(self, pos):
+        """
+        Follow the path to the root,
+        move parent down if parent is smaller than child
+        """
+        while pos > 0:
+            parent_pos = (pos - 1) >> 1
+            if self.heap[pos] > self.heap[parent_pos]:  # Min heap: if A < B
+                self._swap_item(pos, parent_pos)
+                pos = parent_pos
+                continue
+            break
+
+    def _siftup(self, pos):
+        """
+        Bubble child up if child is bigger than parent
+        """
+        def get_bigger_child_pos(left_pos, right_pos):
+            if self.heap[left_pos] >= self.heap[right_pos]:
+                return left_pos
+            else:
+                return right_pos
+
+        end_pos = len(self.heap)
+        child_pos = 2 * pos + 1  # Left child
+
+        while child_pos < end_pos:
+            right_pos = 2 * pos + 2
+            if right_pos < end_pos:
+                child_pos = get_bigger_child_pos(child_pos, right_pos)
+            if self.heap[child_pos] > self.heap[pos]:  # Min heap: if A < B
+                self._swap_item(pos, child_pos)
+                pos = child_pos
+                child_pos = 2 * pos + 1
+                continue
+            break
+
+    def _swap_item(self, pos1, pos2):
+        self.heap[pos1], self.heap[pos2] = self.heap[pos2], self.heap[pos1]
+```
