Update 703. Kth Largest Element in a Stream.md

--- a/703. Kth Largest Element in a Stream.md
+++ b/703. Kth Largest Element in a Stream.md
@@ -176,3 +176,30 @@ class MaxHeap:
     def _swap_item(self, pos1, pos2):
         self.heap[pos1], self.heap[pos2] = self.heap[pos2], self.heap[pos1]
 ```
+
+
+## Step 4
+
+- 時間を空けて解き直した。
+
+```python
+from heapq import heappush, heappushpop
+
+
+class KthLargest:
+
+    def __init__(self, k: int, scores: List[int]):
+        self.k = k
+        self.topk_scores = []
+        
+        for score in scores:
+            self.add(score)
+
+    def add(self, score: int) -> int:
+        if len(self.topk_scores) < self.k:
+            heappush(self.topk_scores, score)
+        else:
+            heappushpop(self.topk_scores, score)
+        return self.topk_scores[0]
+```
+
