Update 347. Top K Frequent Elements.md
Add 4th step

--- a/347. Top K Frequent Elements.md
+++ b/347. Top K Frequent Elements.md
@@ -116,6 +116,25 @@ class Solution:
 ```
 
 
+## 4th step
+
+- Third stepと同じになった。変数名が少し違うだけ。
+
+```python
+class Solution:
+    def topKFrequent(self, nums: List[int], k: int) -> List[int]:
+        top_k = []
+        num_to_count = Counter(nums)
+
+        for num, count in num_to_count.items():
+            if len(top_k) < k:
+                heapq.heappush(top_k, (count, num))
+            else:
+                heapq.heappushpop(top_k, (count, num))
+        return [num for _, num in top_k]
+```
+
+
 ## 調べたこと
 
 - Python 辞書型について[公式ドキュメント](https://docs.python.org/ja/3.13/library/stdtypes.html#mapping-types-dict)を読んだ。ハッシュマップで実装されている。キーがハッシュ可能なので、キーは変更不可（イミュータブル）なオブジェクトでないといけない。
