Update 373. Find K Pairs with Smallest Sums.md

--- a/373. Find K Pairs with Smallest Sums.md
+++ b/373. Find K Pairs with Smallest Sums.md
@@ -117,3 +117,34 @@ class Solution:
             add_into_candinates_if_possible(i, j + 1)
         return pairs
 ```
+
+
+## 4th step
+
+- 日をあけて解き直したが、third stepと全く同じコードになった。
+
+```python
+from heapq import heappush, heappop
+
+
+class Solution:
+    def kSmallestPairs(self, nums1: List[int], nums2: List[int], k: int) -> List[List[int]]:
+        candinates = [(nums1[0] + nums2[0], 0, 0)]
+        seen = set()
+
+        def add_into_candinates_if_possible(x, y):
+            if x >= len(nums1) or y >= len(nums2):
+                return
+            if (x, y) in seen:
+                return
+            heappush(candinates, (nums1[x] + nums2[y], x, y))
+            seen.add((x, y))
+        
+        pairs = []
+        while len(pairs) < k and candinates:
+            _, i, j = heappop(candinates)
+            pairs.append([nums1[i], nums2[j]])
+            add_into_candinates_if_possible(i + 1, j)
+            add_into_candinates_if_possible(i, j + 1)
+        return pairs
+```
