Update 49. Group Anagrams.md

--- a/49. Group Anagrams.md
+++ b/49. Group Anagrams.md
@@ -91,5 +91,21 @@ class Solution:
 - [ord関数](https://docs.python.org/3/library/functions.html#ord)
 - [frozenset](https://docs.python.org/3/library/stdtypes.html#frozenset)
 - `str`と`"".join()`の違い
-- defaultdictの実装。あとでやろう。
-  
+
+
+  defaultdictの再実装
+
+```python  
+class DefaultDict:
+    def __init__(self, default_factory=None):
+        self.default_factory = default_factory
+        self.original_dict = dict()
+
+    def __setitem__(self, key, value):
+        self.original_dict[key] = value
+
+    def __getitem__(self, key):
+        if key not in self.original_dict:
+            self.original_dict[key] = self.default_factory()
+        return self.original_dict[key]
+  ```
