Update 387. First Unique Character in a String.md

--- a/387. First Unique Character in a String.md
+++ b/387. First Unique Character in a String.md
@@ -108,6 +108,91 @@ class Solution:
 ```
 
 
+## 4th step
+
+- Counterの再実装。dictは継承しなかった。
+
+```python
+"""
+Example usage of MyCounter.
+
+>>> nums = [1, 4, 1, 2, 2, 1]
+>>> c = MyCounter(nums)
+>>> c[1]
+3
+>>> c[4]
+1
+>>> c.update((4, 4))
+>>> c[4]
+3
+"""
+import _collections_abc
+
+
+class MyCounter:
+    def __init__(self, iterable=None):
+        """
+        Create empty MyCounter object.
+        Input iterable will be counted if given.
+        Alternatively, it can be initialized by passing mapping object.
+        """
+        self.original_dict = {}
+        self.update(iterable)
+
+    def update(self, iterable):
+        """
+        Add count of iterable into a MyCounter object.
+        """
+        def count_elements(iterable) -> dict:
+            elem_to_count = {}
+            for elem in iterable:
+                elem_to_count[elem] = 1 + elem_to_count.get(elem, 0)
+            return elem_to_count
+
+        if iterable is None:
+            return
+        if isinstance(iterable, _collections_abc.Mapping):
+            if self.original_dict is None:
+                self.original_dict.update(iterable)
+                return
+            for key in iterable:
+                self.original_dict[key] = (iterable[key]
+                                           + self.original_dict.get(key, 0))
+        else:
+            self.update(count_elements(iterable))
+
+    def __getitem__(self, key):
+        if key not in self.original_dict:
+            return 0
+        return self.original_dict[key]
+
+    def __setitem__(self, key, value):
+        self.original_dict[key] = value
+```
+
+- 日を置いて解き直した。このコードが一番頭に残っていた。
+
+```python
+class Solution:
+    def firstUniqChar(self, string: str) -> int:
+        char_to_first_index = {}
+        duplicated = set()
+
+        for index, c in enumerate(string):
+            if c in duplicated:
+                continue
+            if c in char_to_first_index:
+                del char_to_first_index[c]
+                duplicated.add(c)
+                continue
+            char_to_first_index[c] = index
+        
+        if not char_to_first_index:
+            return -1  # Not found
+        return min(char_to_first_index.values())
+```
+
+
 ## 調べたこと
 
 - [deque document](https://docs.python.org/3/library/collections.html#collections.deque): LRUcacheの実装にDequeというデータ構造が使われていた。
