--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -73,6 +73,24 @@ class Solution:
 ```
 
 
+## 4th step
+
+- 時間を置いて、解き直す。ほとんど同じコードになるのが不思議。
+
+```python
+class Solution:
+    def twoSum(self, nums: List[int], target: int) -> List[int]:
+        num_to_index = defaultdict(int)
+
+        for index, num in enumerate(nums):
+            complement = target - num
+            if complement in num_to_index:
+                return [index, num_to_index[complement]]
+            num_to_index[num] = index
+        raise ValueError("No two numbers of input can add up to the target.")
+```
+
+
 ## 調べたこと
 
 - [defaultdict](https://docs.python.org/ja/3.13/library/collections.html#collections.defaultdict)
