Update 49. Group Anagrams.md

--- a/49. Group Anagrams.md
+++ b/49. Group Anagrams.md
@@ -86,6 +86,19 @@ class Solution:
 ```
 
 
+## 4th step(解き直し）
+
+```python
+class Solution:
+    def groupAnagrams(self, words: List[str]) -> List[List[str]]:
+        sorted_to_originals = defaultdict(list)
+
+        for word in words:
+            sorted_to_originals[tuple(sorted(word))].append(word)
+        return list(sorted_to_originals.values())
+```
+
+
 ## 他に調べたこと
 
 - [ord関数](https://docs.python.org/3/library/functions.html#ord)
