Update 349. Intersection of Two Arrays.md

--- a/349. Intersection of Two Arrays.md
+++ b/349. Intersection of Two Arrays.md
@@ -81,6 +81,31 @@ class Solution:
 
 - 問題を見た時に連想する幅がまだ狭いことを実感した。
 
+
+## Step4（解き直し）
+
+- Third stepと同じようなコードを書いた。
+
+```python
+class Solution:
+    def intersection(self, nums1: List[int], nums2: List[int]) -> List[int]:
+	"""
+	Allowed input range for these input lists: 0 <= range <= 1000
+	"""
+        common = []
+        max_elements = 1001
+        seen = [0] * max_elements
+
+        for n1 in nums1:
+            seen[n1] = 1
+        for n2 in nums2:
+            if seen[n2] == 1:
+                common.append(n2)
+                seen[n2] = 0
+        return common
+```
+
+
 ## 調べたこと
 
 - [Set time complexity](https://wiki.python.org/moin/TimeComplexity#set)
