Update 929. Unique Email Addresses.md

--- a/929. Unique Email Addresses.md
+++ b/929. Unique Email Addresses.md
@@ -129,6 +129,24 @@ class Solution:
 ```
 
 
+## 4th step（解き直し）
+
+```python
+class Solution:
+    def numUniqueEmails(self, emails: List[str]) -> int:
+        def canonicalize(email: str) -> str:
+            local, domain = email.split("@")  # Raise error if number of @ is not 1
+            local = local.split("+")[0]
+            local = local.replace(".", "")
+            return f"{local}@{domain}"
+
+        unique_emails = set()
+        for email in emails:
+            unique_emails.add(canonicalize(email))
+        return len(unique_emails)
+```
+
+
 ## 調べたこと
 
 - [split cpython](https://github.com/python/cpython/blob/main/Objects/stringlib/split.h#L102): C言語のsplit関数に似ていた。
