Update 387. First Unique Character in a String.md

--- a/387. First Unique Character in a String.md
+++ b/387. First Unique Character in a String.md
@@ -193,6 +193,19 @@ class Solution:
 ```
 
 
+## 5th step（解き直し）
+
+```python
+class Solution:
+    def firstUniqChar(self, string: str) -> int:
+        char_to_frequency = Counter(string)
+
+        for index, c in enumerate(string):
+            if char_to_frequency[c] == 1:
+                return index
+        return -1  # Not found
+```
+
 ## 調べたこと
 
 - [deque document](https://docs.python.org/3/library/collections.html#collections.deque): LRUcacheの実装にDequeというデータ構造が使われていた。
