Update 560. Subarray Sum Equals K.md

--- a/560. Subarray Sum Equals K.md
+++ b/560. Subarray Sum Equals K.md
@@ -88,3 +88,21 @@ class Solution:
             prefix_sum_to_count[prefix_sum] += 1
         return subarray_count
 ```
+
+
+## 4th step（解き直し）
+
+```python
+class Solution:
+    def subarraySum(self, nums: List[int], k: int) -> int:
+        subarray_count = 0
+        prefix_sum = 0
+        prefix_sum_to_count = defaultdict(int)
+        prefix_sum_to_count[0] = 1
+
+        for num in nums:
+            prefix_sum += num
+            subarray_count += prefix_sum_to_count[prefix_sum - k]
+            prefix_sum_to_count[prefix_sum] += 1
+        return subarray_count
+```
